--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,7 @@
   --border-radius-3: 1.2rem;
 
   --pading-1: 1.2rem;
+  --margin-1: 1.2rem;
 
   --box-shadow: 0 2rem 3rem var(--color-light);
 }
@@ -64,7 +65,7 @@ h3 {
 }
 
 h4 {
-  font-size: 0.8rem;
+  font-size: 1rem;
 }
 
 h5 {
@@ -77,6 +78,7 @@ h3,
 h4,
 h5 {
   color: var(--color-white);
+  margin-block: var(--margin-1);
 }
 
 section {
@@ -195,6 +197,18 @@ header div {
   display: grid;
   grid-template-columns: repeat(2, 2fr);
   margin: 2rem 0;
+
+  /* animation css*/
+  opacity: 0;
+  transform: scale(0.9);
+  transform: translateX(-50px);
+  transition: 0.7s ease-in-out all;
+}
+
+.component__list.visible {
+  opacity: 1;
+  transform: translateX(0px);
+  transform: scale(1);
 }
 
 .component__item {
