--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,8 @@
   --color-dark: #363949;
   --color-dark-variant: #677483;
   --color-background: #111114;
+  --color-menu: #161618;
+  --color-menu-shadow: 0 2px 10px rgba(145, 145, 145, 0.2);
   --color-link: #b9b9db;
 
   --border-radius-1: 0.4rem;
@@ -26,6 +28,8 @@
   --color-info-light: #252525;
   --color-light: rgba(133, 133, 133, 0.18);
   --color-background: #f3f1f1;
+  --color-menu: #e9e9e9;
+  --color-menu-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
   --color-link: #9393e5;
 
   --color-dark-variant: #4d585f;
@@ -98,7 +102,7 @@ nav {
   align-items: center;
   margin-bottom: 1.3rem;
   padding: var(--pading-1);
-  z-index: 1;
+  z-index: 2;
 }
 
 li a {
@@ -124,6 +128,13 @@ li a:hover {
   margin-right: 0.8rem;
 }
 
+.nav__options {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 1.5rem;
+}
+
 .nav__theme-toggler {
   background-color: var(--color-light);
   display: flex;
@@ -131,7 +142,6 @@ li a:hover {
   align-items: center;
   height: 1.6rem;
   width: 4.2rem;
-  cursor: pointer;
   border-radius: var(--border-radius-1);
 }
 
@@ -149,6 +159,10 @@ li a:hover {
   background: var(--color-dark-variant);
   color: #181a1e;
   border-radius: var(--border-radius-1);
+}
+
+.nav__menu-toggler {
+  cursor: pointer;
 }
 
 .container {
@@ -226,4 +240,70 @@ header div {
 
 .details__specs {
   color: var(--color-dark-variant);
+}
+
+.menu {
+  /* display: none; */
+  position: fixed;
+  left: 50%;
+  top: -999px;
+  transform: translate(-50%, 0);
+  background-color: var(--color-menu);
+  border-radius: 15px;
+  box-shadow: var(--color-menu-shadow);
+  padding: 1rem 2rem;
+  z-index: 1;
+  transition: top 0.7s ease-out;
+}
+
+.menu > * {
+  text-align: center;
+}
+
+.menu.visible {
+  top: 70px;
+}
+
+.menu__close {
+  cursor: pointer;
+}
+
+.menu_content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+/* Mobile */
+@media (max-width: 500px) {
+  nav .nav__links {
+    display: none;
+  }
+
+  .nav__options {
+    gap: 1rem;
+  }
+
+  .menu .nav__links {
+    justify-content: space-around;
+    font-size: 0.8rem;
+    margin-block: 0.3rem;
+  }
+
+  .menu {
+    font-size: 10px;
+    width: 80%;
+    overflow: auto;
+  }
+  .menu h2 {
+    font-size: 1.1rem;
+  }
+  .menu h3 {
+    display: none;
+  }
+
+  .menu .component__list {
+    margin: 0;
+  }
 }
